--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 header {
     text-align: center;
     padding: 10px;
-    background-color: #1aafa3;
+    background-color: #1616b1;
 }
 
 section {
@@ -18,5 +18,5 @@ section {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #f0f0f0;
+    background-color: #831717;
 }
